eks-config/manifests/2048/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: service-port
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-2048
